<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPass"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/new_pass">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPass"
            android:inputType="textVisiblePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPass"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_pass">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_10dp">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/margin_10dp"
                android:layout_weight="0.5"
                android:text="@string/save_new_pass"
                android:id="@+id/btnSave"
                android:textSize="@dimen/layout_margin_20sp"
                android:layout_margin="@dimen/layout_margin_20dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/margin_10dp"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
                android:textSize="@dimen/layout_margin_20sp"
                android:layout_margin="@dimen/layout_margin_20dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>